hard-gists/9dcd642059214d81b3ef/run.log
=== Docker Run Log for 9dcd642059214d81b3ef ===
Started at: Mi 29. Okt 18:41:55 CET 2025

[2025-10-29 18:41:55] START: Running container for 9dcd642059214d81b3ef
[2025-10-29 18:41:55] SUCCESS: Container e9a015cb219bb82004ae396b9baf637d17cdf7898d9ef5a6e4ccbbec615e2075 started for 9dcd642059214d81b3ef
=== Container logs for 9dcd642059214d81b3ef ===
  File "/snippet.py", line 59
    print '%s\n' % task
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9dcd642059214d81b3ef ===
[2025-10-29 18:41:57] INFO: Container e9a015cb219bb82004ae396b9baf637d17cdf7898d9ef5a6e4ccbbec615e2075 has stopped
